--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -1,6 +1,6 @@
 .movie-card {
-  width: 220px;
-  height: 330px;
+  width: 110px; /* 절반 크기 */
+  height: 165px; /* 절반 크기 */
   background-size: cover;
   cursor: pointer;
   transition: 0.5s;
@@ -14,11 +14,9 @@
   height: 100%;
   background: rgba(43, 41, 41, 0.9);
   opacity: 0;
-  transition: opacity 0.5s ease;
+  transition: all 0.5s ease;
   color: white;
   font-weight: bold;
-  overflow-wrap: break-word;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -39,13 +37,15 @@
 /* 반응형 스타일 */
 @media (max-width: 768px) {
   .movie-card {
-    width: 160px;
-    height: 240px;
+    width: 100px;
+    height: 150px;
   }
+}
 
-  .overlay {
-    font-size: 0.85rem;
-    padding: 8px;
+@media (max-width: 480px) {
+  .movie-card {
+    width: 90px;
+    height: 135px;
   }
 
   .movie-card:hover {
