--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -1,28 +1,20 @@
 .movie-card {
-  width: 110px; /* 절반 크기 */
-  height: 165px; /* 절반 크기 */
+  width: 220px;
+  height: 330px;
   background-size: cover;
   cursor: pointer;
   transition: 0.5s;
-  border-radius: 10px;
-  position: relative;
-  overflow: hidden;
 }
-
 .overlay {
   width: 100%;
   height: 100%;
   background: rgba(43, 41, 41, 0.9);
   opacity: 0;
-  transition: all 0.5s ease;
+  transition: all 1s;
   color: white;
   font-weight: bold;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  text-align: center;
+  overflow-wrap: break-word;
+  border-radius: 10px;
 }
 
 .overlay:hover {
@@ -30,24 +22,20 @@
 }
 
 .movie-card:hover {
-  transform: scale(1.1);
+  transform: scale(1.1) translateZ(20px);
   z-index: 2;
 }
 
 @media (max-width: 768px) {
   .movie-card {
-    width: 70px;
-    height: 105px;
+    width: 100px; /* 태블릿용 */
+    height: 150px;
   }
 }
 
 @media (max-width: 480px) {
   .movie-card {
-    width: 60px;
-    height: 90px;
-  }
-
-  .movie-card:hover {
-    transform: scale(1.05); /* 모바일에서 살짝만 확대 */
+    width: 80px; /* 모바일용 */
+    height: 120px;
   }
 }
