--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -1,14 +1,19 @@
+/* 기존 스타일 유지 */
 .movie-card {
   width: 220px;
   height: 330px;
   background-size: cover;
   cursor: pointer;
   transition: 0.5s;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
+
 .overlay {
   width: 100%;
   height: 100%;
-  background: rgba(43, 41, 41, 0.9);
+  background: rgba(43, 41, 41, 0.8);
   opacity: 0;
   transition: all 1s;
   color: white;
@@ -26,16 +31,29 @@
   z-index: 2;
 }
 
+/* 태블릿과 모바일에서 카드 크기 조정 */
 @media (max-width: 768px) {
   .movie-card {
-    width: 100px; /* 태블릿용 */
+    width: 100px;
     height: 150px;
+  }
+  .movie-slider-title {
+    margin-bottom: 10px; /* 슬라이드 제목과 카드 사이 간격 줄이기 */
+  }
+  .movie-slider-container {
+    gap: 10px; /* 카드 사이의 간격 늘리기 */
   }
 }
 
 @media (max-width: 480px) {
   .movie-card {
-    width: 80px; /* 모바일용 */
+    width: 80px;
     height: 120px;
+  }
+  .movie-slider-title {
+    margin-bottom: 5px; /* 슬라이드 제목과 카드 사이 간격 더 줄이기 */
+  }
+  .movie-slider-container {
+    gap: 8px; /* 카드 사이의 간격을 더 넓게 조정 */
   }
 }
