--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -1,4 +1,3 @@
-/* 기존 스타일 유지 */
 .movie-card {
   width: 220px;
   height: 330px;
@@ -8,6 +7,7 @@
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+  margin: 10px;
 }
 
 .overlay {
@@ -20,6 +20,10 @@
   font-weight: bold;
   overflow-wrap: break-word;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .overlay:hover {
@@ -36,11 +40,12 @@
   .movie-card {
     width: 100px;
     height: 150px;
+    margin: 8px; /* 태블릿 간격 줄이기 */
   }
   .movie-slider-title {
     margin-bottom: 10px; /* 슬라이드 제목과 카드 사이 간격 줄이기 */
   }
-  .movie-slider-container {
+  .carousel-container {
     gap: 10px; /* 카드 사이의 간격 늘리기 */
   }
 }
@@ -49,11 +54,12 @@
   .movie-card {
     width: 80px;
     height: 120px;
+    margin: 5px; /* 모바일용 카드 간격 */
   }
   .movie-slider-title {
     margin-bottom: 20px; /* 슬라이드 제목과 카드 사이 간격 더 줄이기 */
   }
-  .movie-slider-container {
+  .carousel-container {
     gap: 8px; /* 카드 사이의 간격을 더 넓게 조정 */
   }
 }
